; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_mchain.c_md_get_uint32le.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_mchain.c_md_get_uint32le.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mdchain = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @md_get_uint32le(%struct.mdchain* %0, i32* %1) #0 {
  %3 = alloca %struct.mdchain*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mdchain* %0, %struct.mdchain** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.mdchain*, %struct.mdchain** %3, align 8
  %8 = call i32 @md_get_uint32(%struct.mdchain* %7, i32* %5)
  store i32 %8, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @le32toh(i32 %12)
  %14 = load i32*, i32** %4, align 8
  store i32 %13, i32* %14, align 4
  br label %15

15:                                               ; preds = %11, %2
  %16 = load i32, i32* %6, align 4
  ret i32 %16
}

declare dso_local i32 @md_get_uint32(%struct.mdchain*, i32*) #1

declare dso_local i32 @le32toh(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
